<resources>
    <string name="app_name">ToDo App</string>
    <string name="text_username">Hallo, Imam!</string>
    <string name="text_hallo">Hallo, %1s!</string>
    <string name="text_task">0 Task for Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="text_description">Description</string>
    <string name="task_name">Title</string>
    <string name="time">07:00</string>
    <string name="add_task">Add Task</string>
    <string name="status">Complete</string>
    <string name="delete">Delete</string>
    <string name="no_data">Empty Task</string>
    <string name="update_task">Update Task</string>
    <string name="delete_task">Delete Task</string>

</resources>