<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.task.dell.DeleteActivity">


    <TextView
        android:id="@+id/text_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="26sp"
        android:text="Update Task"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/text_add_task" />


    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:gravity="top"
        app:layout_goneMarginTop="16dp"
        android:hint="@string/text_description"
        android:inputType="textMultiLine"
        android:lines="6"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="@id/edt_title"
        app:layout_constraintEnd_toEndOf="@id/edt_title"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/edt_title"

        />






    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_tasks_btn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingVertical="8dp"
        android:text="@string/update_task"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/delete_tasks_btn"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
         />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_tasks_btn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingVertical="8dp"
        android:text="@string/delete_task"
        android:textAllCaps="false"
        android:backgroundTint="@color/redText"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/update_tasks_btn"

        />

</androidx.constraintlayout.widget.ConstraintLayout>